🐛 [BE] Elasticsearch cosmetic ranking
For now simply based on click/hit counts with click-more-valuable weights