@@ -5,11 +5,12 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.data.mongodb.core.convert.MongoCustomConversions;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class MongoConfig {
     @Bean
     public MongoCustomConversions customConversions() {
-        return new MongoCustomConversions(Arrays.asList(new StringToCategoryConverter()));
+        return new MongoCustomConversions(List.of(new StringToCategoryConverter()));
     }
 }
